--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "install": "^0.13.0",
+    "jquery": "^3.6.0",
     "npm": "^8.15.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
